@@ -1,3 +1,8 @@
+2019-10-18  Tom Tromey  <tom@tromey.com>
+
+	* configure: Rebuild.
+	* acinclude.m4: Use m4_include, not sinclude.
+
 2019-10-17  Tom Tromey  <tromey@adacore.com>
 
 	* configure: Rebuild.
